carpetas css,js,html, fotos y video

--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Aprende HTML y desarrollo web con las mejores prácticas." />
+    <meta name="keywords" content="HTML, CSS, desarrollo web, SEO, accesibilidad" />
+    <meta name="author" content="Tu Nombre" />
+    <meta name="robots" content="index, follow" />
     <title>My web</title>
 </head>
 <body>
-    <h1>Portfolio</h1>
+    <header>
+        <h1>Portfolio</h1>
+        <nav>
+			<ul>
+				<li><a href="Inicio">Inicio</a></li>
+				<li><a href="Productos">Productos</a></li>
+                <li><a href="Contacto">Contacto</a></li>
+                <li><a href="mailto:consuegrarocio@gmail.com">Escríbeme</a></li>
+                <li><a href="+34628773256">Llámame</a></li>
+                <li><a target= "_blank" href="https://es.search.yahooo.com">Buscar</a></li>
+			</ul>
+		</nav>
+    </header>
+
+    <main>
+        <section>
+			<h2>Sobre Nosotros</h2>
+			<p>Bienvenido a nuestra página.</p>
+            <img
+                src="https://marketplace.canva.com/EAGFeN6meG8/2/0/1600w/canva-fondo-de-pantalla-collage-fotos-playa-mar-aesthetic-recortes-pastel-s8Q2cVPSpLk.jpg"
+                alt="Paisaje" />
+            <video controls>
+                    <source src="https://videos.pexels.com/video-files/5799307/5799307-hd_1920_1080_30fps.mp4" type="video/mp4" />
+                    Tu navegador no soporta la etiqueta de video.
+            </video>
+        </section>
+    </main>
+
+	<footer>
+		<p>&copy; 2025 Mi Web</p>
+	</footer>
 </body>
 </html>
