--- a/typography/index.html
+++ b/typography/index.html
@@ -7,6 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/favicon rosa/apple-touch-icon.png" />
     <link rel="manifest" href="./assets/icons/favicon rosa/site.webmanifest" />
     <meta charset="UTF-8" />
+    <link href="https://fonts.googleapis.com/css2?family=Poltawski+Nowy:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 
@@ -14,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1></i>Guía de tipografía</h1>
+        <h1>Guía de tipografía</h1>
         <i class="fas fa-camera"></i>
         <i class="fa-regular fa-font-awesome"></i>
         <nav>
@@ -32,7 +33,6 @@
         <section>
 			<h2>Sobre Nosotros</h2>
 			<p>Bienvenido a nuestra página.</p>
-            </video>
         </section>
     </main>
 
