en index typography he añadido texto

--- a/typography/index.html
+++ b/typography/index.html
@@ -16,8 +16,15 @@
 <body>
     <header>
         <h1>Guía de tipografía</h1>
+        <p class="subtitulo">Ejemplo práctico de fuentes y animaciones CSS</p>
         <i class="fas fa-camera"></i>
         <i class="fa-regular fa-font-awesome"></i>
+    </header>
+    <main>
+        <section>
+			<h2>Historia</h2>
+			<p>Desde la Bauhaus hasta la era digital, la tipografía ha evolucionado ...</p>
+		</section>
         <nav>
 			<ul>
 				<li><a href="Inicio">Inicio</a></li>
@@ -28,8 +35,6 @@
                 <li><a target= "_blank" href="https://es.search.yahooo.com">Buscar</a></li>
 			</ul>
 		</nav>
-    </header>
-    <main>
         <section>
 			<h2>Sobre Nosotros</h2>
 			<p>Bienvenido a nuestra página.</p>
