--- a/error404/index.html
+++ b/error404/index.html
@@ -3,7 +3,8 @@
 <head>  
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Error 404 - Página no encontrada</title> 
+    <title>Error 404 - Página no encontrada</title>
+    <link rel="icon" type="image/png" href="mickey.png"> 
     <link rel="stylesheet" href="styles.css"> 
 </head>  
 <body>  
@@ -18,7 +19,7 @@
         </h1>
 
         <!-- Mensaje de error para el usuario -->
-        <p>¡Oh no! Parece que te has perdido en el mundo mágico.</p> 
+        <p>Parece que esta página ha desaparecido como por arte de magia.</p> 
 
         <!-- Botón de regreso a la página principal -->
         <a href="index.html" class="btn">Volver a casa</a> 
