--- a/404.html
+++ b/404.html
@@ -1,4 +1,13 @@
-/* Importación de una fuente personalizada desde Google Fonts */
+<!DOCTYPE html>  
+<html lang="es"> 
+<head>  
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Error 404 - Página no encontrada</title>
+    <link rel="icon" type="image/png" href="mickey.png"> 
+    <link rel="stylesheet" href="404.css"> 
+    <style>
+        /* Importación de una fuente personalizada desde Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap');
 
 body {
@@ -117,3 +126,25 @@ p {
     50% { transform: scale(1.05); }
     100% { transform: scale(1); }
 }
+
+    </style>
+</head>  
+<body>  
+    <!-- Contenedor principal que agrupa todos los elementos -->
+    <div class="container"> 
+
+        <!-- Título de la página con animaciones -->
+        <h1>
+            <span class="number">4</span> <!-- Primer número del "404" -->
+            <img src="./assets/imagenes/mickey.png" alt="Mickey Mouse" class="mickey"> <!-- Imagen de Mickey en el centro -->
+            <span class="number">4</span> <!-- Segundo número del "404" -->
+        </h1>
+
+        <!-- Mensaje de error para el usuario -->
+        <p>Parece que esta página ha desaparecido como por arte de magia.</p> 
+
+        <!-- Botón de regreso a la página principal -->
+        <a href="index.html" class="btn">Volver a casa</a> 
+    </div>
+</body>  
+</html>
