--- a/miportfolio/index.html
+++ b/miportfolio/index.html
@@ -19,7 +19,7 @@
   </header>
 
   <main class="intro-section">
-    <h1>HI, I’M <span class="cursive">ROCÍO</span></h1>
+    <h1>HI, I’M <span class="cursive">ROCIO</span></h1>
     <h2>WELCOME TO MY PORTFOLIO</h2>
     <p class="swipe">Swipe down<br>↓</p>
 
