iconos, imagenes, aboutme

--- a/miportfolio/index.html
+++ b/miportfolio/index.html
@@ -11,9 +11,9 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About me</a></li>
-        <li><a href="#">Works</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About me</a></li>
+        <li><a href="works.html">Works</a></li>
       </ul>
     </nav>
   </header>
@@ -36,10 +36,11 @@
           Design allows me to express ideas and connect with people in a visual way. I’m always curious to learn new tools, explore trends, and grow as a designer. Outside of design, I enjoy drawing, watching films, and discovering new music.
         </p>
         <p>Thanks for visiting my portfolio — I hope you enjoy my work!</p>
-        <a href="#" class="btn">View All Information</a>
+        <div class="about-image">
+        <img src="./assets/images/mi foto.JPG" alt="Rocío profile photo" />
       </div>
-      <div class="about-image">
-        <img src="profile.jpg" alt="Rocío profile photo" />
+      <div>
+        <a href="about.html" class="btn">View All Information</a>
       </div>
     </section>
 
@@ -47,17 +48,17 @@
     <h3 class="works-title">Recent Works</h3>
         <div class="works-grid">
             <div class="work-card">
-                <img src="img/capricho.jpg" alt="Capricho Wine Brand">
+                <img src="./assets/images/botellas delante.PNG" alt="Capricho Wine Brand">
                 <p class="category">Branding</p>
                 <h4>Capricho Wine Brand</h4>
             </div>
             <div class="work-card">
-                <img src="img/magma.jpg" alt="Magma Poster">
+                <img src="./assets/images/tipography.png" alt="Magma Poster">
                 <p class="category">Typography</p>
                  <h4>Magma Poster</h4>
             </div>
             <div class="work-card">
-                <img src="img/precio_crecer.jpg" alt="El precio de crecer">
+                <img src="./assets/images/" alt="El precio de crecer">
                 <p class="category">Editorial Design</p>
                 <h4>El precio de crecer</h4>
             </div>
@@ -72,7 +73,7 @@
                 <h4>Heaven Studio</h4>
             </div>
             <div class="work-card">
-                <img src="img/veranos_villa.jpg" alt="Veranos de la Villa Poster">
+                <img src="./assets/images/marquesina.PNG" alt="Veranos de la Villa Poster">
                 <p class="category">Graphic Design</p>
                 <h4>"Veranos de la Villa" Poster</h4>
             </div>
