about,works,fotos, capricho e iconos

--- a/miportfolio/about.html
+++ b/miportfolio/about.html
@@ -19,7 +19,7 @@
   </header>
     <section class="about">
         <div class="about-text">
-            <h3 class="about-title">About me</h3>
+            <h3 class="section-title">About me</h3>
             <p>
             Hi! My name is Rocío Consuegra and I’m a graphic design student currently studying at UDIT, in Madrid. I’m passionate about visual communication and love exploring different areas of design, especially UX/UI, typography, and editorial design.
             </p>
@@ -38,9 +38,11 @@
         <section id="all-info" class="skills-section">
       <h3 class="about-title">Languages</h3>
       <ul>
-        <li>Spanish - Native</li>
-        <li>English - C1</li>
-      </ul>
+        <div class="skill-name"><img src="./assets/icons/españa.png" alt="Español">Español</div>
+        <p> Native </p>
+         <div class="skill-name"><img src="./assets/icons/reino unido.png"alt="English">English</div>
+        <p> C1 </p>
+        </ul>
 
      <h3 class="about-title">Skills</h3>
       <div class="skill">
