--- a/miportfolio/index.html
+++ b/miportfolio/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
   <header>
     <nav>
       <ul>
@@ -37,61 +38,63 @@
         </p>
         <p>Thanks for visiting my portfolio — I hope you enjoy my work!</p>
         <div class="about-image">
-        <img src="./assets/images/mi foto.JPG" alt="Rocío profile photo" />
-      </div>
-      <div>
-        <a href="about.html" class="btn">View All Information</a>
+          <img src="./assets/images/mi foto.JPG" alt="Rocío profile photo" />
+        </div>
+        <div>
+          <a href="about.html" class="btn">View All Information</a>
+        </div>
       </div>
     </section>
 
     <section class="works-section">
-    <h3 class="works-title">Recent Works</h3>
-        <div class="works-grid">
-            <div class="work-card">
-                <img src="./assets/images/botellas delante.PNG" alt="Capricho Wine Brand">
-                <p class="category">Branding</p>
-                <h4>Capricho Wine Brand</h4>
-            </div>
-            <div class="work-card">
-                <img src="./assets/images/tipography.png" alt="Magma Poster">
-                <p class="category">Typography</p>
-                 <h4>Magma Poster</h4>
-            </div>
-            <div class="work-card">
-                <img src="./assets/images/" alt="El precio de crecer">
-                <p class="category">Editorial Design</p>
-                <h4>El precio de crecer</h4>
-            </div>
-            <div class="work-card">
-                <img src="img/tarraf.jpg" alt="Casa Tarradellas Rebranding">
-                <p class="category">Branding</p>
-                <h4>Casa Tarradellas Rebranding</h4>
-            </div>
-            <div class="work-card">
-                <img src="img/heaven.jpg" alt="Heaven Studio">
-                <p class="category">Branding</p>
-                <h4>Heaven Studio</h4>
-            </div>
-            <div class="work-card">
-                <img src="./assets/images/marquesina.PNG" alt="Veranos de la Villa Poster">
-                <p class="category">Graphic Design</p>
-                <h4>"Veranos de la Villa" Poster</h4>
-            </div>
+      <h3 class="works-title">Recent Works</h3>
+      <div class="works-grid">
+        <div class="work-card">
+          <img src="./assets/images/botellas delante.PNG" alt="Capricho Wine Brand">
+          <p class="category">Branding</p>
+          <h4>Capricho Wine Brand</h4>
         </div>
-        <div class="center-btn">
-            <a href="#" class="btn">View All</a>
+        <div class="work-card">
+          <img src="./assets/images/tipography.png" alt="Magma Poster">
+          <p class="category">Typography</p>
+          <h4>Magma Poster</h4>
         </div>
+        <div class="work-card">
+          <img src="./assets/images/fanzine.JPG" alt="El precio de crecer">
+          <p class="category">Editorial Design</p>
+          <h4>El precio de crecer</h4>
+        </div>
+        <div class="work-card">
+          <img src="./assets/images/Double Poster PSD Mockup.png" alt="Lo que no se ve">
+          <p class="category">Psychology of Perception</p>
+          <h4>"Lo que no se ve" Campaign</h4>
+        </div>
+        <div class="work-card">
+          <img src="./assets/images/boss mode.PNG" alt="Soft Edge">
+          <p class="category">Photography</p>
+          <h4>Soft Edge</h4>
+        </div>
+        <div class="work-card">
+          <img src="./assets/images/marquesina.PNG" alt="Veranos de la Villa Poster">
+          <p class="category">Graphic Design</p>
+          <h4>"Veranos de la Villa" Poster</h4>
+        </div>
+      </div>
+      <div class="center-btn">
+        <a href="works.html" class="btn">View All</a>
+      </div>
     </section>
-
-<footer>
-  <div class="footer-content">
-    <div class="footer-contact">
-      <p>@rocixdesign</p>
-      <p><a href="mailto:consuegrarocio05@gmail.com">consuegrarocio05@gmail.com</a></p>
-    </div>
-    <p class="copyright">©2025 Rocío Consuegra’s Portfolio</p>
-  </div>
-</footer>
   </main>
+
+  <footer>
+    <div class="footer-content">
+      <div class="footer-contact">
+        <p>@rocixdesign</p>
+        <p><a href="mailto:consuegrarocio05@gmail.com">consuegrarocio05@gmail.com</a></p>
+      </div>
+      <p class="copyright">©2025 Rocío Consuegra’s Portfolio</p>
+    </div>
+  </footer>
+
 </body>
 </html>
