capricho, fanzine y magma estructura y texto

--- a/miportfolio/fanzine.html
+++ b/miportfolio/fanzine.html
@@ -19,7 +19,7 @@
   </header>
 
   <main class="intro-section">
-    <h3 class="section-title">Capricho</h3>
+    <h3 class="section-title">The Price of Growing Up</h3>
 
     <div class="carousel">
       <!-- Inputs para controlar el carrusel -->
@@ -45,18 +45,18 @@
     <!-- Sección de texto explicativo -->
     <section class="about">
       <div class="explicaciones">
-        <h3 class="project-title">A wine brand for a new generation</h3>
+        <h3 class="project-title">A critical look at adulthood through The Little Prince</h3>
         <p>
-          <b>Capricho</b> is a natural wine brand created to connect with a new generation of consumers: young people who value authenticity, respect for nature, and contemporary design. This project aims to recover almost forgotten native grape varieties from the Valencian Community, such as Moscatel de Alejandría and Parrel, grown in unique environments like the La Mata Natural Park — an area known for its salinity and closeness to the Mediterranean Sea.
+          <b>The price of growing up</b> is a commemorative fanzine created for the 100th anniversary of The Little Prince. This project offers a critical and contemporary reinterpretation of Antoine de Saint-Exupéry’s classic, focusing on the adult world and the habits we often adopt without realizing: meaningless power, forgetting ourselves, living in routine, or using distractions to escape reality.
         </p>
         <p>
-          Capricho’s winemaking approach is based on natural methods, allowing the fruit and the land to express their full character. It is a bold proposal that mixes traditional practices with experimental techniques, trying to redefine organic wine from a young and accessible perspective.
+          Each section of the fanzine is based on one of the characters the Little Prince meets during his journey — the king, the drinker, the businessman, among others — and connects their attitude in the book to present-day issues. Short reflections accompany each part, inviting the reader to think about these behaviors in a personal and introspective way.
         </p>
         <p>
-          The result is a range of white, red, and rosé wines with low alcohol content, fruity, fresh, and smooth — perfect for social and informal occasions. Beyond the product, Capricho represents an attitude: the idea of taking a spontaneous moment, breaking the routine, and enjoying the unexpected — a true “caprice” with purpose. 
+          The visual language of the fanzine is built with collage illustrations, a technique that adds a fragmented and critical tone to the work. The color palette — blue, black, grey, and white — creates a calm, poetic, and slightly melancholic mood, in line with the message.
         </p>
         <p>
-          Graphic design plays a key role in the brand’s identity. The use of vibrant colors, bold typography, and dynamic visual compositions reflects the youthful and free spirit that defines both the target audience and the project itself. Capricho’s image doesn’t just accompany the product — it interprets and communicates it, creating an immediate emotional connection with the consumer.
+          <b>The Price of Growing Up</b> is more than a tribute; it is an invitation to question what we may have lost on the way to becoming adults. A project that blends literature, reflection, and editorial design to recover the voice of the child we once were — and might still be able to hear.
         </p>
       </div>
     </section>
