--- a/miportfolio/magma.html
+++ b/miportfolio/magma.html
@@ -19,7 +19,7 @@
   </header>
 
   <main class="intro-section">
-    <h3 class="section-title">Capricho</h3>
+    <h3 class="section-title">Magma</h3>
 
     <div class="carousel">
       <!-- Inputs para controlar el carrusel -->
@@ -45,18 +45,15 @@
     <!-- Sección de texto explicativo -->
     <section class="about">
       <div class="explicaciones">
-        <h3 class="project-title">A wine brand for a new generation</h3>
+        <h3 class="project-title">Structure, rhythm, and typographic personality</h3>
         <p>
-          <b>Capricho</b> is a natural wine brand created to connect with a new generation of consumers: young people who value authenticity, respect for nature, and contemporary design. This project aims to recover almost forgotten native grape varieties from the Valencian Community, such as Moscatel de Alejandría and Parrel, grown in unique environments like the La Mata Natural Park — an area known for its salinity and closeness to the Mediterranean Sea.
+          <b>Magma</b> is an experimental typeface developed from a geometric grid, created as an exercise in form and structure exploration. Each letter features rounded corners and a distinctive cut on one of its edges, giving the typeface a unique rhythm and strong identity. The result is a typographic system that combines structural precision with expressive details.
         </p>
         <p>
-          Capricho’s winemaking approach is based on natural methods, allowing the fruit and the land to express their full character. It is a bold proposal that mixes traditional practices with experimental techniques, trying to redefine organic wine from a young and accessible perspective.
+          The project is presented through a typographic poster that works as both a showcase and a visual summary. On a black and pink background, the composition highlights the contrast between geometric discipline and creative freedom. The original grid remains visible in the background, showing the technical process behind each letter and adding an educational dimension to the piece.
         </p>
         <p>
-          The result is a range of white, red, and rosé wines with low alcohol content, fruity, fresh, and smooth — perfect for social and informal occasions. Beyond the product, Capricho represents an attitude: the idea of taking a spontaneous moment, breaking the routine, and enjoying the unexpected — a true “caprice” with purpose. 
-        </p>
-        <p>
-          Graphic design plays a key role in the brand’s identity. The use of vibrant colors, bold typography, and dynamic visual compositions reflects the youthful and free spirit that defines both the target audience and the project itself. Capricho’s image doesn’t just accompany the product — it interprets and communicates it, creating an immediate emotional connection with the consumer.
+          Magma is not just a typeface — it’s a reflection on the balance between structure and visual freedom. Its design offers a contemporary, versatile, and recognizable option, suitable for editorial use or more expressive graphic projects. The poster communicates this dual nature: control and disruption, order and personality.
         </p>
       </div>
     </section>
