--- a/miportfolio/index.html
+++ b/miportfolio/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rocío's Portfolio</title>
   <link rel="stylesheet" href="./css/styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Arizonia&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -20,7 +20,7 @@
   </header>
 
   <main class="intro-section">
-    <h1>HI, I’M <span class="cursive">ROCIO</span></h1>
+    <h1>HI, I’M <span class="arizonia">ROCIO</span></h1>
     <h2>WELCOME TO MY PORTFOLIO</h2>
     <p class="swipe">Swipe down<br>↓</p>
 
