arreglo9s de estructura en index y about

--- a/miportfolio/about.html
+++ b/miportfolio/about.html
@@ -17,32 +17,46 @@
       </ul>
     </nav>
   </header>
-    <section class="about">
-        <div class="about-text">
-            <h3 class="section-title">About me</h3>
-            <p>
-            Hi! My name is Rocío Consuegra and I’m a graphic design student currently studying at UDIT, in Madrid. I’m passionate about visual communication and love exploring different areas of design, especially UX/UI, typography, and editorial design.
-            </p>
-            <p>
-            My style is clean, colorful, and often inspired by everyday life and modern culture. I like mixing digital and traditional techniques to find creative solutions.
-            </p>
-            <p>
-            Design allows me to express ideas and connect with people in a visual way. I’m always curious to learn new tools, explore trends, and grow as a designer. Outside of design, I enjoy drawing, watching films, and discovering new music.
-            </p>
-            <p>Thanks for visiting my portfolio — I hope you enjoy my work!</p>
-            <div class="about-image">
-            <img src="./assets/images/mi foto.JPG" alt="Rocío profile photo" />
-        </div>
+
+<main>
+        <section class="about">
+    <div class="about-text">
+      <h3 class="about-title">About me</h3>
+      <p>
+       Hi! My name is Rocío Consuegra and I’m a graphic design student currently studying at UDIT, in Madrid. I’m passionate about visual communication and love exploring different areas of design, especially UX/UI, typography, and editorial design.
+     </p>
+      <p>
+        My style is clean, colorful, and often inspired by everyday life and modern culture. I like mixing digital and traditional techniques to find creative solutions.
+     </p>
+     <p>
+        Design allows me to express ideas and connect with people in a visual way. I’m always curious to learn new tools, explore trends, and grow as a designer. Outside of design, I enjoy drawing, watching films, and discovering new music.
+      </p>
+      <p>Thanks for visiting my portfolio — I hope you enjoy my work!</p>
+    </div>
+    <div class="about-image">
+      <img src="./assets/images/mi foto.JPG" alt="Rocío profile photo" />
+    </div>
         </section>
 
         <section id="all-info" class="skills-section">
+          <div class="container">
       <h3 class="about-title">Languages</h3>
-      <ul>
-        <div class="skill-name"><img src="./assets/icons/españa.png" alt="Español">Español</div>
-        <p> Native </p>
-         <div class="skill-name"><img src="./assets/icons/reino unido.png"alt="English">English</div>
-        <p> C1 </p>
-        </ul>
+      <ul class="language-list">
+        <li class="language-item">
+          <div class="language-info">
+            <img src="./assets/icons/españa.png" alt="Español">
+            <span>Español</span>
+          </div>
+          <span class="language-level">Native</span>
+        </li>
+        <li class="language-item">
+          <div class="language-info">
+            <div class="skill-name"><img src="./assets/icons/reino unido.png" alt="English">English</div>>
+            <span>English</span>
+          </div>
+          <span class="language-level">C1</span>
+        </li>
+      </ul>
 
      <h3 class="about-title">Skills</h3>
       <div class="skill">
@@ -90,8 +104,10 @@
 
     <h3 class="about-title">Experience</h3>
       <p><a href="./assets/files/CV_RocioConsuegra.pdf" download>Download CV</a></p>
+    </div>
     </section>
-    </main>
+  </main>
+
   <footer>
     <div class="footer-content">
       <div class="footer-contact">
