--- a/miportfolio/index.html
+++ b/miportfolio/index.html
@@ -9,42 +9,44 @@
 </head>
 <body>
 
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About me</a></li>
-        <li><a href="works.html">Works</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <nav>
+    <ul>
+    <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About me</a></li>
+      <li><a href="works.html">Works</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <main class="intro-section">
-    <h1>HI, I’M <span class="arizonia">ROCIO</span></h1>
-    <h2>WELCOME TO MY PORTFOLIO</h2>
-    <p class="swipe">Swipe down<br>↓</p>
+<section class="intro-section">
+  <h1>HI, I’M <span class="arizonia">ROCIO</span></h1>
+  <h2>WELCOME TO MY PORTFOLIO</h2>
+  <p class="swipe">Swipe down<br>↓</p>
+</section>
 
-    <section class="about">
-      <div class="about-text">
-        <h3 class="about-title">About me</h3>
-        <p>
-          Hi! My name is Rocío Consuegra and I’m a graphic design student currently studying at UDIT, in Madrid. I’m passionate about visual communication and love exploring different areas of design, especially UX/UI, typography, and editorial design.
-        </p>
-        <p>
-          My style is clean, colorful, and often inspired by everyday life and modern culture. I like mixing digital and traditional techniques to find creative solutions.
-        </p>
-        <p>
-          Design allows me to express ideas and connect with people in a visual way. I’m always curious to learn new tools, explore trends, and grow as a designer. Outside of design, I enjoy drawing, watching films, and discovering new music.
-        </p>
-        <p>Thanks for visiting my portfolio — I hope you enjoy my work!</p>
-        <div class="about-image">
-          <img src="./assets/images/mi foto.JPG" alt="Rocío profile photo" />
-        </div>
-        <div>
-          <a href="about.html" class="btn">View All Information</a>
-        </div>
-      </div>
-    </section>
+<main class="intro-section">
+  <section class="about">
+    <div class="about-text">
+      <h3 class="about-title">About me</h3>
+      <p>
+       Hi! My name is Rocío Consuegra and I’m a graphic design student currently studying at UDIT, in Madrid. I’m passionate about visual communication and love exploring different areas of design, especially UX/UI, typography, and editorial design.
+     </p>
+      <p>
+        My style is clean, colorful, and often inspired by everyday life and modern culture. I like mixing digital and traditional techniques to find creative solutions.
+     </p>
+     <p>
+        Design allows me to express ideas and connect with people in a visual way. I’m always curious to learn new tools, explore trends, and grow as a designer. Outside of design, I enjoy drawing, watching films, and discovering new music.
+      </p>
+      <p>Thanks for visiting my portfolio — I hope you enjoy my work!</p>
+      <a href="about.html" class="btn">View All Information</a>
+    </div>
+
+  <div class="about-image">
+    <img src="./assets/images/mi foto.JPG" alt="Rocío profile photo" />
+    </div>
+  </section>
+
 
     <section class="works-section">
       <h3 class="works-title">Recent Works</h3>
