about, works y capricho cambios de estructura

--- a/miportfolio/about.html
+++ b/miportfolio/about.html
@@ -40,23 +40,24 @@
 
         <section id="all-info" class="skills-section">
           <div class="container">
-      <h3 class="about-title">Languages</h3>
-      <ul class="language-list">
-        <li class="language-item">
-          <div class="language-info">
-            <img src="./assets/icons/españa.png" alt="Español">
-            <span>Español</span>
-          </div>
-          <span class="language-level">Native</span>
-        </li>
-        <li class="language-item">
-          <div class="language-info">
-            <div class="skill-name"><img src="./assets/icons/reino unido.png" alt="English">English</div>>
-            <span>English</span>
-          </div>
-          <span class="language-level">C1</span>
-        </li>
-      </ul>
+            <h3 class="about-title">Languages</h3>
+        <ul class="language-list">
+          <li class="language-item">
+            <div class="skill-name">
+              <img src="./assets/icons/españa.png" alt="Español">
+              Español
+            </div>
+            <div class="skill-name">Native</div>
+          </li>
+          <li class="language-item">
+            <div class="skill-name">
+              <img src="./assets/icons/reino unido.png" alt="English">
+              English
+            </div>
+            <div class="skill-name">C1</div>
+          </li>
+        </ul>
+
 
      <h3 class="about-title">Skills</h3>
       <div class="skill">
@@ -68,7 +69,7 @@
       <div class="skill">
         <div class="skill-name"><img src="./assets/icons/illustrator.png" alt="Illustrator">Illustrator</div>
         <div class="skill-dots">
-          <span class="dot filled"></span><span class="dot filled"></span><span class="dot filled"></span><span class="dot empty"></span><span class="dot empty"></span>
+          <span class="dot filled"></span><span class="dot filled"></span><span class="dot filled"></span><span class="dot filled"></span><span class="dot empty"></span>
         </div>
       </div>
       <div class="skill">
@@ -86,7 +87,7 @@
       <div class="skill">
         <div class="skill-name"><img src="./assets/icons/audition.png" alt="Audition">Audition</div>
         <div class="skill-dots">
-          <span class="dot filled"></span><span class="dot empty"></span><span class="dot empty"></span><span class="dot empty"></span><span class="dot empty"></span>
+          <span class="dot filled"></span><span class="dot filled"></span><span class="dot empty"></span><span class="dot empty"></span><span class="dot empty"></span>
         </div>
       </div>
       <div class="skill">
@@ -98,7 +99,7 @@
       <div class="skill">
         <div class="skill-name"><img src="./assets/icons/html y css.png" alt="Html y Css">HTML y CSS</div>
         <div class="skill-dots">
-          <span class="dot filled"></span><span class="dot filled"></span><span class="dot empty"></span><span class="dot empty"></span><span class="dot empty"></span>
+          <span class="dot filled"></span><span class="dot filled"></span><span class="dot filled"></span><span class="dot empty"></span><span class="dot empty"></span>
         </div>
       </div>
 
