--- a/miportfolio/works.html
+++ b/miportfolio/works.html
@@ -17,77 +17,104 @@
       </ul>
     </nav>
   </header>
-    <h3 class="section-title">Works</h3>
+
+  <main class="intro-section">
+    <h3 class="about-title">Works</h3>
             <section class="works-section">
         <div class="works-grid">
+          <a href="capricho.html" class="work-link">
             <div class="work-card">
                 <img src="./assets/images/botellas delante.PNG" alt="Capricho Wine Brand">
                 <p class="category">Branding</p>
                 <h4>Capricho Wine Brand</h4>
             </div>
+            </a>
+            <a href="magma.html" class="work-link">
             <div class="work-card">
                 <img src="./assets/images/tipography.png" alt="Magma Poster">
                 <p class="category">Typography</p>
                  <h4>Magma Poster</h4>
             </div>
+            </a>
+            <a href="fanzine.html" class="work-link">
             <div class="work-card">
                 <img src="./assets/images/fanzine.JPG" alt="El precio de crecer">
                 <p class="category">Editorial Design</p>
                 <h4>El precio de crecer</h4>
             </div>
+            </a>
+            <a href="psicologia.html" class="work-link">
              <div class="work-card">
                 <img src="./assets/images/Double Poster PSD Mockup.png" alt="Lo que no se ve">
                 <p class="category">Psychology of Perception</p>
                 <h4>"Lo que no se ve" Campaign</h4>
             </div>
+            </a>
+            <a href="foto.html" class="work-link">
             <div class="work-card">
                 <img src="./assets/images/boss mode.PNG" alt="Soft Edge">
                 <p class="category">Photography</p>
                 <h4>Soft Edge</h4>
             </div>
+            </a>
+            <a href="veranosvilla.html" class="work-link">
             <div class="work-card">
                 <img src="./assets/images/marquesina.PNG" alt="Veranos de la Villa Poster">
                 <p class="category">Graphic Design</p>
                 <h4>"Veranos de la Villa" Poster</h4>
             </div>
+            </a>
+            <a href="heavenstudio.html" class="work-link">
              <div class="work-card">
                 <img src="./assets/images/heaven.PNG" alt="Heaven Studio">
                 <p class="category">Branding</p>
                 <h4>Heaven Studio</h4>
             </div>
+            </a>
+            <a href="casatarradellas.html" class="work-link">
             <div class="work-card">
                 <img src="img/tarraf.jpg" alt="Casa Tarradellas Rebranding">
                 <p class="category">Branding</p>
                 <h4>Casa Tarradellas Rebranding</h4>
             </div>
+            </a>
+            <a href="uditapp.html" class="work-link">
              <div class="work-card">
                 <img src="./assets/images/uditapp.JPG" alt="Udit App">
                 <p class="category">Interactive Design</p>
                 <h4>Udit App</h4>
             </div>
+            </a>
+            <a href="calendario.html" class="work-link">
             <div class="work-card">
                 <img src="./assets/images/calendario.PNG" alt="Calendario">
                 <p class="category">Editorial Design</p>
                 <h4>Calendario</h4>
             </div>
+            </a>
+            <a href="bookcovers.html" class="work-link">
             <div class="work-card">
                 <img src="./assets/images/bookcover.PNG" alt="Book portraits">
                 <p class="category">Illustration</p>
                 <h4>Book portraits</h4>
             </div>
+            </a>
+            <a href="spicysocks.html" class="work-link">
             <div class="work-card">
                 <img src="./assets/images/spicysocks.PNG" alt="Spicy Socks">
                 <p class="category">Interactive Design</p>
                 <h4>Spicy Socks</h4>
             </div>
+            </a>
+            <a href="brota.html" class="work-link">
             <div class="work-card">
                 <img src="./assets/images/brota3.PNG" alt="Brota App">
                 <p class="category">Interactive Design</p>
                 <h4>Brota App</h4>
-            </div>
+          </div>
         </div>
     </section>
-
+</main>
 <footer>
   <div class="footer-content">
     <div class="footer-contact">
