cambios de cada trabajo y el carrusel

--- a/miportfolio/capricho.html
+++ b/miportfolio/capricho.html
@@ -21,45 +21,37 @@
   <main class="intro-section">
     <h3 class="section-title">Capricho</h3>
 
-    <div class="carousel">
-      <!-- Inputs para controlar el carrusel -->
-      <input type="radio" name="slides" id="slide1" checked>
-      <input type="radio" name="slides" id="slide2">
-      <input type="radio" name="slides" id="slide3">
 
-      <!-- Contenedor de las imágenes -->
-      <div class="slides">
-        <div class="slide"><img src="assets/images/botellas delante.PNG" alt="Capricho Imagen 1"></div>
-        <div class="slide"><img src="assets/images/Double Poster PSD Mockup.png" alt="Capricho Imagen 2"></div>
-        <div class="slide"><img src="assets/images/bookcover.PNG" alt="Capricho Imagen 3"></div>
-      </div>
+ <div class="carousel">
+    <div class="slides">
+      <!-- Repetimos las imágenes para simular el bucle infinito -->
+      <div class="slide"><img src="assets/images/DELANTE TODAS.PNG" alt="Imagen 1"></div>
+      <div class="slide"><img src="assets/images/TRASERA TODAS.png" alt="Imagen 2"></div>
 
-      <!-- Controles (botones de navegación) -->
-      <div class="controls">
-        <label for="slide1"></label>
-        <label for="slide2"></label>
-        <label for="slide3"></label>
-      </div>
+      <!-- Duplicadas para la animación infinita -->
+      <div class="slide"><img src="assets/images/DELANTE TODAS.PNG" alt="Imagen 1 repetida"></div>
+      <div class="slide"><img src="assets/images/TRASERA TODAS.png" alt="Imagen 2 repetida"></div>
     </div>
+  </div>
 
-    <!-- Sección de texto explicativo -->
-    <section class="about">
-      <div class="explicaciones">
-        <h3 class="project-title">A wine brand for a new generation</h3>
-        <p>
-          <b>Capricho</b> is a natural wine brand created to connect with a new generation of consumers: young people who value authenticity, respect for nature, and contemporary design. This project aims to recover almost forgotten native grape varieties from the Valencian Community, such as Moscatel de Alejandría and Parrel, grown in unique environments like the La Mata Natural Park — an area known for its salinity and closeness to the Mediterranean Sea.
-        </p>
-        <p>
-          Capricho’s winemaking approach is based on natural methods, allowing the fruit and the land to express their full character. It is a bold proposal that mixes traditional practices with experimental techniques, trying to redefine organic wine from a young and accessible perspective.
-        </p>
-        <p>
-          The result is a range of white, red, and rosé wines with low alcohol content, fruity, fresh, and smooth — perfect for social and informal occasions. Beyond the product, Capricho represents an attitude: the idea of taking a spontaneous moment, breaking the routine, and enjoying the unexpected — a true “caprice” with purpose. 
-        </p>
-        <p>
-          Graphic design plays a key role in the brand’s identity. The use of vibrant colors, bold typography, and dynamic visual compositions reflects the youthful and free spirit that defines both the target audience and the project itself. Capricho’s image doesn’t just accompany the product — it interprets and communicates it, creating an immediate emotional connection with the consumer.
-        </p>
-      </div>
-    </section>
+   
+  <section class="about">
+    <div class="explicaciones">
+      <h3 class="project-title">A wine brand for a new generation</h3>
+      <p>
+        <b>Capricho</b> is a natural wine brand created to connect with a new generation of consumers: young people who value authenticity, respect for nature, and contemporary design. This project aims to recover almost forgotten native grape varieties from the Valencian Community, such as Moscatel de Alejandría and Parrel, grown in unique environments like the La Mata Natural Park — an area known for its salinity and closeness to the Mediterranean Sea.
+      </p>
+      <p>
+        Capricho’s winemaking approach is based on natural methods, allowing the fruit and the land to express their full character. It is a bold proposal that mixes traditional practices with experimental techniques, trying to redefine organic wine from a young and accessible perspective.
+      </p>
+      <p>
+        The result is a range of white, red, and rosé wines with low alcohol content, fruity, fresh, and smooth — perfect for social and informal occasions. Beyond the product, Capricho represents an attitude: the idea of taking a spontaneous moment, breaking the routine, and enjoying the unexpected — a true “caprice” with purpose. 
+      </p>
+      <p>
+        Graphic design plays a key role in the brand’s identity. The use of vibrant colors, bold typography, and dynamic visual compositions reflects the youthful and free spirit that defines both the target audience and the project itself. Capricho’s image doesn’t just accompany the product — it interprets and communicates it, creating an immediate emotional connection with the consumer.
+      </p>
+    </div>
+  </section>
   
 
   <div>
