--- a/miportfolio/fanzine.html
+++ b/miportfolio/fanzine.html
@@ -21,28 +21,18 @@
   <main class="intro-section">
     <h3 class="section-title">The Price of Growing Up</h3>
 
-    <div class="carousel">
-      <!-- Inputs para controlar el carrusel -->
-      <input type="radio" name="slides" id="slide1" checked>
-      <input type="radio" name="slides" id="slide2">
-      <input type="radio" name="slides" id="slide3">
+      <div class="carousel">
+    <div class="slides">
+      <!-- Repetimos las imágenes para simular el bucle infinito -->
+      <div class="slide"><img src="assets/images//DELANTE TODAS.PNG" alt="Imagen 1"></div>
+      <div class="slide"><img src="assets/images/TRASERA TODAS.png" alt="Imagen 2"></div>
 
-      <!-- Contenedor de las imágenes -->
-      <div class="slides">
-        <div class="slide"><img src="assets/images/botellas delante.PNG" alt="Capricho Imagen 1"></div>
-        <div class="slide"><img src="assets/images/Double Poster PSD Mockup.png" alt="Capricho Imagen 2"></div>
-        <div class="slide"><img src="assets/images/bookcover.PNG" alt="Capricho Imagen 3"></div>
-      </div>
-
-      <!-- Controles (botones de navegación) -->
-      <div class="controls">
-        <label for="slide1"></label>
-        <label for="slide2"></label>
-        <label for="slide3"></label>
-      </div>
+      <!-- Duplicadas para la animación infinita -->
+      <div class="slide"><img src="assets/images//DELANTE TODAS.PNG" alt="Imagen 1 repetida"></div>
+      <div class="slide"><img src="assets/images//DELANTE TODAS.PNG" alt="Imagen 2 repetida"></div>
+    </div>
     </div>
 
-    <!-- Sección de texto explicativo -->
     <section class="about">
       <div class="explicaciones">
         <h3 class="project-title">A critical look at adulthood through The Little Prince</h3>
@@ -60,11 +50,10 @@
         </p>
       </div>
     </section>
-  </main>
-
-  <div>
-    <a href="works.html" class="btn">Back to works</a>
-  </div>
+      <div>
+        <a href="works.html" class="btn">Back to works</a>
+      </div>
+ </main>
 
   <footer>
     <div class="footer-content">
